[package]
name = "ezo_i2c_rs"
version = "0.1.0"
authors = ["D'mitri Joseph <a.dmitrijoseph@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
embedded-hal = "0.2.4"


[dev-dependencies]
linux-embedded-hal = "0.3.0"
